# hyperfocus-agent

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  LANGCHAIN_MIGRATION_PLAN.md  PHASE1_COMPLETE.md  PHASE2_COMPLETE.md  QUICK_START.md  docker-compose.yml  notes  pyproject.toml  test_pokemon_skeleton.py  test_unified_outline.py  test_various_scenarios.py
.github/: copilot-instructions.md
benchmarks/pokemon_to_csv/: benchmark.py
benchmarks/pokemon_to_md/: jp_cards.md
benchmarks/scripts/: convert_md_to_csv.py
docker/: Dockerfile  Dockerfile.dev  entrypoint-dev.sh  utf8_server.py
scripts/: run-docker.sh  test-docker.sh
src/hyperfocus_agent/: agent.py  context_builder.py  data_store.py  directory_ops.py  file_ops.py  image_ops.py  langchain_agent.py  langchain_main.py  langchain_middleware.py  langchain_state.py  llm_router.py  main.py  model_config.py  ocr.py  prompts.py  shell_ops.py  task_executor.py  task_ops.py  tool_router.py  types.py  utils.py  web_ops.py
src/hyperfocus_agent/langchain_tools/: README.md  __init__.py  csv_tools.py  directory_tools.py  file_tools.py  image_tools.py  shell_tools.py  task_tools.py  web_tools.py
src/hyperfocus_agent/middleware/: README.md  context_middleware.py  image_middleware.py  logging_middleware.py  tool_middleware.py
src/hyperfocus_agent/utils/: __init__.py  html_utils.py  image_utils.py
test-harness/: command_tester.py
test-harness/benchmarks/: run_benchmarks.py
test-harness/benchmarks/lib/: __init__.py  benchmark_base.py  config.py  runner.py
test-harness/benchmarks/pokemon_card_lookup/: benchmark.py
test-harness/benchmarks/pokemon_to_csv/: benchmark.py  jp_cards_all.csv
test-harness/output/: 1.txt  2.txt  3.txt
tests/: conftest.py  test_benchmark_scoring.py  test_compact_skeleton.py  test_context_middleware.py  test_get_xpath_list.py  test_pokemon_csv_verify.py  test_pokemon_skeleton.py  test_tbody_example.py  test_tool_middleware.py  test_unified_outline.py  test_various_scenarios.py  test_xpath_outline.py  test_xpath_real_world.py
tests/csv_test_assets/comparison/: expected_jp_cards_all.csv
tests/fixtures/sample_files/: data.json  example.txt
workspace/sample_files/: SetCode-Title-NumberofCards.csv  expansions.html  extract_set_icons.py  japanese_pokemon_cards.csv  out.md
workspace/sample_files/expansions_files/: ads.min.js.download  css2  galleryplayer.js.download  js  load(1).php  load(2).php  load.php
