[tool.poetry]
name = "hyperfocus-agent"
version = "0.1.0"
description = ""
authors = ["Brandon Bakker <brandon@bdmd.com.au>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
# Note: Keeping openai ^2.0 for compatibility - langchain-openai 0.2.x requires openai <2.0
# We'll need to use langchain-openai ^0.3.0 which supports openai ^2.0
openai = "^2.6.1"
requests = "^2.31.0"
html2text = "^2025.4.15"
readability-lxml = "^0.8.4.1"
lxml = "^6.0.2"
beautifulsoup4 = "^4.14.2"
markdown-analysis = "^0.1.5"
arize-phoenix-otel = "^0.13.1"
# LangChain dependencies for migration - using 0.3.x for openai 2.x compatibility
langchain = "^1.0.5"
langgraph = "^1.0.3"
langchain-openai = "^1.0.2"
openinference-instrumentation-langchain = "^0.1.55"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
hyperfocus = "hyperfocus_agent.main:main"