[tool.poetry]
name = "hyperfocus-agent"
version = "0.1.0"
description = ""
authors = ["Brandon Bakker <brandon@bdmd.com.au>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
openai = "^2.6.1"
requests = "^2.31.0"
html2text = "^2025.4.15"
readability-lxml = "^0.8.4.1"
lxml = "^6.0.2"
beautifulsoup4 = "^4.14.2"
markdown-analysis = "^0.1.5"
arize-phoenix-otel = "^0.13.1"

langchain = "^1.0.5"
langgraph = "^1.0.3"
langchain-openai = "^1.0.2"
openinference-instrumentation-langchain = "^0.1.55"
duckdb = "^1.4.2"
ripgrepy = "^2.2.0"
docker = "^7.1.0"
html-chunking = "^0.0.4"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
hyperfocus = "hyperfocus_agent.main:main"
ocr = "hyperfocus_agent.ocr:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
filterwarnings = [
    "ignore::langgraph.errors.LangGraphDeprecatedSinceV10"
]